--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
+.homepage{
+    background-color: #FFF6F8;
+    height: 100vh;
+    width: 100vw;
+    overflow-x: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar{
+    background-color: #1A183F;
+    color: white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.intro-board{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+    background-color: #FFF1D6;
+    height: 50vh;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.title{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 10vh;
 }
 
-.App-link {
-  color: #61dafb;
+.illustration1{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: 40vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.screen{
+    height: 30vh;
+    width: 25vw;
+    background-color: white;
+    margin-top: auto;
+}
+
+.illustration1 img{
+    height: 30vh;
+    margin-top: auto;
+}
+
+
+.intro-para{
+    display: flex;
+    flex-direction: row;
+    
 }
