--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -50,23 +50,69 @@
 .intro-para{
     display: flex;
     flex-direction: row;
-    margin-top: 10vw;
+    width: 80vw !important;
+    margin: 10vw !important;
 }
 
 
 .intro-text{
-    width: auto;
+    font-size: small;
+    width: 50% !important;
 }
 
-.working-boy{
+.working-boy, working-team{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content:left;
-    width: 50%;
+    width: 50% !important;
 }
 
 .working-boy img{
     height: 30vh;
     margin-left: auto;
 }
+
+.working-team img{
+    height: 40vh;
+}
+
+.card-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.all-cards{
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 3vw;
+}
+
+.each-card{
+    height: 15vh;
+    width:12vw;
+    margin: 1vw;
+    font-size: small;
+}
+
+
+.middle-band{
+    width: 100vw;
+    background-color:#1A183F ;
+    color: white;
+    padding: 2vw;
+}
+
+.card{
+    margin: 1vw;
+}
+.member-card{
+    height: 20vh;
+    width: 7vw;
+    background-color: white;
+    margin: 1vw;
+}
+
+
