--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,70 +1,58 @@
-.homepage{
-    background-color: #FFF6F8;
-    height: 100vh;
-    width: 100vw;
-    overflow-x: hidden;
+.horizontal-placement{
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
-.navbar{
+.vertical-placement{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.full-width-bands{
+    width: 100vw;
     background-color: #1A183F;
     color: white;
+    padding: 0.5vw;
 }
 
-.intro-board{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100vw;
-    background-color: #FFF1D6;
-    height: 50vh;
-}
-
-.title{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 10vh;
-}
-
-.illustration1{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    height: 40vh;
-}
-
-.screen{
-    height: 30vh;
-    width: 25vw;
-    background-color: white;
-    margin-top: auto;
-}
-
-.illustration1 img{
-    height: 30vh;
-    margin-top: auto;
-}
-
-
-.intro-para{
-    display: flex;
-    flex-direction: row;
+.text-img-container{
     width: 80vw !important;
     margin: 10vw !important;
 }
 
 
-.intro-text{
-    font-size: small;
-    width: 50% !important;
+.homepage{
+    background-color: #FFF6F8;
+    height: 100vh;
+    width: 100vw;
+    overflow-x: hidden;
+    font-size: medium
 }
 
-.working-boy, working-team{
-    display: flex;
-    flex-direction: column;
-    width: 50% !important;
+
+.welcome-board{
+    width: 100vw;
+    background-color: #FFF1D6;   
 }
+
+.title{
+    height: 10vh;
+}
+
+.people-group{
+    height: 40vh;
+}
+
+.people-group img{
+    height: 30vh;
+    margin-top: auto;
+}
+
+
 
 .working-boy img{
     height: 30vh;
@@ -75,44 +63,53 @@
     height: 40vh;
 }
 
-.card-container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.all-cards{
-    display:flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    padding: 3vw;
-}
-
-.each-card{
+.info-card{
     height: 15vh;
     width:12vw;
     margin: 1vw;
-    font-size: small;
-}
-
-
-.middle-band{
-    width: 100vw;
-    background-color:#1A183F ;
-    color: white;
-    padding: 2vw;
 }
 
 .card{
     margin: 1vw;
 }
+
 .member-card{
-    height: 20vh;
-    width: 7vw;
+    height: 10vh;
+    width: 5vw;
     background-color: white;
     margin: 1vw;
 }
 
 
+.board-container{
+    padding-top: 10vw;
+}
+
+.board-card{
+    width: 50vw;
+    height: 10vh;
+    margin: 2vw;
+    padding-left: 2vw;
+    padding-right: 2vw;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); 
+}
+
+
+.greeting-people img{
+    height: 30vh;
+    align-items: flex-end !important;
+}
+
+.last-band-content{
+    width:30vw !important;
+    margin-top: 5vw;
+    margin-bottom: 5vw;
+   
+
+
+}
+
+.band-button{
+    margin: 0.5vw;
+    width: 10vw;
+}
