--- a/my-app/src/allChannels.css
+++ b/my-app/src/allChannels.css
@@ -29,8 +29,28 @@
 }
 
 .channels-list{
+    height: 85vh;
     width: 75% !important;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow-y: auto;
 }
+
+.channel{
+    width: 80%;
+    height: 4vw;
+    background-color: white;
+    margin-bottom: 1vw;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.channel:hover{
+    cursor: pointer;
+    transform: scale(1.05);
+    background-color: #C3BEFF;
+}
+
 
 .rightside-bar{
     width: 25% !important;
@@ -42,6 +62,7 @@
     display: flex;
     flex-direction: column;
     padding: 0 !important;
+    margin: 0 !important;
     height:50vh;
     overflow-y: auto;
 }
@@ -58,6 +79,12 @@
     width: 100%;
     background-color: white;
     padding: 0.5vw;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+
+.direct-msg-member:hover{
+    background-color: #C3BEFF;
 }
 
 
@@ -81,6 +108,16 @@
 .create-channel-stack img{
     height: 15vh;
     margin-bottom: 1vw;
+}
+
+.new-channels-form {
+    width: 60%;
+}
+
+.channel-form-button{
+    width: 60% !important;
+    background-color: #6C63FF !important ;
+    border-color: #6C63FF !important ;
 }
 
 
