--- a/my-app/src/UniformStyle.css
+++ b/my-app/src/UniformStyle.css
@@ -55,17 +55,9 @@
     height: 85vh;
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin: 0 !important;
-    overflow-y: auto !important;
 }
-
-.large-grid-container::-webkit-scrollbar{
-    width: 0.3vw;
-    background-color: #C3BEFF;
-    border-radius: 1vw;
-}
-
-
 
 
 
