--- a/my-app/src/allChannels.css
+++ b/my-app/src/allChannels.css
@@ -21,12 +21,28 @@
     align-items: center;
     margin: 0 !important;
     padding: 0 !important;
-    height: 100% ;
+    height: 85vh;
     width: 100%;
-    background-color: #FBE9A6;
-    overflow-y: auto;
+    overflow-y: auto !important;
 }
 
+.channel-list::-webkit-scrollbar{
+    width: 0.3vw;
+    background-color: #C3BEFF;
+    border-radius: 1vw;
+}
+
+
+
+.row {
+    flex-shrink: 0 !important;
+}
+
+
+.col-titles{
+    width: 90% !important;
+    margin-bottom: 1vw;
+}
 
 .channel{
     width: 90%;
@@ -82,5 +98,7 @@
     background-color: #6C63FF !important ;
     border-color: #6C63FF !important ;
 }
+
+
 
 
