--- a/my-app/src/UniformStyle.css
+++ b/my-app/src/UniformStyle.css
@@ -15,7 +15,7 @@
 .page-layout{
     width: 100vw;
     height: 100vh;
-    background-color: #FFF6F8;
+    background-color:#FFEAED !important;
     overflow-x:hidden;
 }
 
@@ -30,12 +30,14 @@
 
 
 .sub-navbar{
+    position: absolute;
     width: 100vw;
     height: 6vh;
-    background-color:#FFF6F8 ;
+    background-color:#FFEAED !important;
     box-shadow: 0px 0px 7px gray;
     padding-left: 4vh !important;
     padding-right:4vh !important;
+    z-index: 10000;
 }
 
 
@@ -44,15 +46,19 @@
 
 
 .page-content{
+    overflow-x: hidden;
+    position: fixed;
+    width: 100vw;
     margin-left: 4vh;
     margin-right: 4vh;
-    margin-top: 4vh;
-    height: 85vh;
+    margin-top: 6vh;
+    height: 89vh;   
 }
 
 .large-grid-container{
+
     width: 75% !important;
-    height: 85vh;
+    height: 89vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -63,8 +69,8 @@
 
 .small-grid-container{
     width: 25% !important;
-    height: 85vh;
-    max-height: 85vh;
+    height: 89vh;
+    max-height: 89vh;
     margin: 0 !important;
     padding: 0 !important;
 
