--- a/frontend/src/allChannels.css
+++ b/frontend/src/allChannels.css
@@ -15,6 +15,34 @@
     border-radius: 3vw !important;
 }
 
+
+
+
+
+.profile{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: black;
+    margin: 0 !important;
+    width: 100%;
+  
+    padding: 1vw;
+    background-color: white;
+    margin-bottom: 1vw !important;
+}
+
+.profile .btn{
+    font-size: 1vw !important;
+    height: 2.5vw;
+    width: 10vw;
+    
+}
+
+.profile .btn:hover{
+    transform: scale(1.05);
+}
+
 .channel-list{
     display: flex;
     flex-direction: column;
@@ -40,15 +68,15 @@
 
 
 .col-titles{
-    width: 90% !important;
+    width: 80% !important;
     margin-bottom: 1vw;
 }
 
 .channel{
-    width: 90%;
-    height: 6vw;
+    width: 80%;
+    height: 4vw;
     background-color: white;
-    margin-bottom: 1vw;
+    margin-bottom: 2vw;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
@@ -68,7 +96,7 @@
 }
 
 .create-channel-block{
-    width: 70%;
+    width: 100%;
     height: 100% ;
     background-color: #FBE9A6;
     border-radius: 1vw;
