Changed layout for pages

--- a/frontend/src/homepage.css
+++ b/frontend/src/homepage.css
@@ -26,7 +26,7 @@
 
 
 .homepage{
-    background-color: #FFF6F8;
+    background-color:white;
     height: 100vh;
     width: 100vw;
     overflow-x: hidden;
