--- a/frontend/src/allChannels.css
+++ b/frontend/src/allChannels.css
@@ -26,7 +26,7 @@
     color: black;
     margin: 0 !important;
     width: 100%;
-  
+    height: 50%;
     padding: 1vw;
     background-color: white;
     margin-bottom: 1vw !important;
@@ -68,16 +68,16 @@
 
 
 .col-titles{
-    width: 80% !important;
-    margin-bottom: 1vw;
+    width: 95% !important;
+    margin-bottom: 3vw;
 }
 
 .channel{
-    width: 80%;
-    height: 4vw;
+    width: 95%;
+    height: 7vw;
     background-color: white;
-    margin-bottom: 2vw;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    margin-bottom: 1vw;
+    border: solid 0.1vw #dfdfdf;
 }
 
 .channel:hover{
@@ -96,9 +96,9 @@
 }
 
 .create-channel-block{
-    width: 100%;
+    width: 90%;
     height: 100% ;
-    background-color: #FBE9A6;
+    background-color:white;
     border-radius: 1vw;
 }
 
