--- a/frontend/src/selectedChannel.css
+++ b/frontend/src/selectedChannel.css
@@ -25,6 +25,15 @@
     
 }
 
+.popover {
+    max-width: none !important;
+    max-height: none !important;
+}
+
+.popover-body {
+    padding: 0 !important;
+}
+
 .material-icons{
     opacity: 0.7;
     font-size: 1.3vw;
