--- a/frontend/src/selectedChannel.css
+++ b/frontend/src/selectedChannel.css
@@ -18,12 +18,23 @@
     border-radius: 1vw;
 }
 
+
+
+
 .text-area{
     width: 100%;
-    padding: 0 !important;
-    gap: 0.2vw;
-    
+    padding: 0.1vw !important;
+    padding-left: 0.3vw !important;
+    padding-right: 0.3vw !important;
+    background-color: white !important;
+    border-radius: 1vw;
+    gap:0.2vw;
+    border: solid 0.1vw rgb(198, 198, 198);
 }
+
+
+
+
 
 .popover {
     max-width: none !important;
@@ -43,21 +54,45 @@
     opacity: 0.7 !important;
 }
 
-.text-area-formcontrol{
-    resize: none !important;
+
+.content-holder{
     width: 100% !important;
     font-size: 0.9vw !important;
-    padding-top: 0 !important;
-    padding-bottom: 0 !important;
-    padding-left: 1vw !important;
-    padding-right: 1vw !important;
-    border-color: rgb(195, 192, 192);
-    border-radius: 1vw !important;
-    
+    padding: 0 !important;
+}
+
+.file-card{
+    width: 10vw;
+    border: dotted 0.1vw grey;
+    border-radius: 0.2vw ;
+    padding: 0.1vw;
+    margin: 0.1vw ;
+    background-color: rgb(231, 231, 231);
+}
+
+.text-area-formcontrol, .filePlaceholders{
+    resize: none !important;
+    width: 100% !important;
+    border: none !important;
+    margin: 0 !important;
+}
+
+.filePlaceholders{
+    padding: 0.5vw;
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+.text-area-formcontrol:focus {
+    outline: none; 
+    border: none; 
+    box-shadow: none; 
 }
 
 
 .text-area-formcontrol::-webkit-scrollbar{
     display: none;
 }
+
 
