--- a/frontend/src/selectedChannel.css
+++ b/frontend/src/selectedChannel.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     margin: 0 !important;
-    padding: 0.3vw !important;
+    padding: 0.5vw !important;
     padding-top: 0 !important;
     height: 85vh;
     width: 100%;
@@ -27,9 +27,7 @@
 }
 
 .all-posts::-webkit-scrollbar{
-    width: 0.3vw;
-    background-color: #C3BEFF;
-    border-radius: 1vw;
+    display: none !important;
 }
 
 
