--- a/frontend/src/selectedChannel.css
+++ b/frontend/src/selectedChannel.css
@@ -8,6 +8,7 @@
     margin: 0 !important;
     padding: 0.5vw !important;
     padding-top: 0 !important;
+    padding-bottom: 2vw !important;
     height: 85vh;
     width: 100%;
     overflow-y: auto !important;
