--- a/frontend/src/directmessage.css
+++ b/frontend/src/directmessage.css
@@ -1,37 +1,3 @@
-.left-sidebar{
-    width: 25% !important;
-    
-}
-
-.middle-sidebar{
-    width: 55% !important;
-    background-color: #ffffff !important;
-}
-
-.right-sidebar{
-    width: 20% !important;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 5vh !important;
-}
-
-.right-sidebar .btn{
-    background-color: white !important;
-    border-color: white !important;
-    width: 60%;
-    color: black !important;
-    box-shadow: 0px 4px 10px rgba(14, 14, 14, 0.2)
-}
-
-.right-sidebar .btn:hover{
-    transform: scale(1.05);
-    background-color: #C3BEFF !important;
-    border-color: #C3BEFF !important;
-}
-
-
-
 
 .all-conversations{
     height: 85vh !important;
@@ -49,3 +15,35 @@
     font-size: small;
 
 }
+
+.connected-user-profile{
+    display: flex !important;
+    flex-direction: column !important;
+    align-items:  center !important;
+}
+
+.sent-message, .recieved-message{
+    display: flex;
+    flex-direction: column;
+    width: 55%;
+    margin-top: 1vw;
+    margin-bottom: 1vw;
+}
+
+.sent-message{
+    margin-left: auto !important;
+    align-items: flex-end !important;
+}
+
+.message{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: white;
+    border-radius: 1vw;
+    margin-left: 2.5vw;
+    font-size: 0.87vw;
+    padding: 1vw;
+}
+
+
