--- a/frontend/src/otherUserProfile.css
+++ b/frontend/src/otherUserProfile.css
@@ -52,6 +52,7 @@
 
 .each-skill{
     margin-right: 1vw;
+    margin-bottom: 1vw;
     padding-left: 0.5vw;
     padding-right: 0.5vw;
     padding-top: 0.2vw;
