--- a/frontend/src/homepage.css
+++ b/frontend/src/homepage.css
@@ -1,16 +1,3 @@
-.horizontal-placement{
-    display:flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-}
-
-.vertical-placement{
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
 
 .full-width-bands{
     width: 100vw;
@@ -19,108 +6,10 @@
     padding: 0.5vw;
 }
 
-.text-img-container{
-    width: 80vw !important;
-    margin: 10vw !important;
-}
-
-
-.homepage{
-    background-color:white;
-    height: 100vh;
-    width: 100vw;
-    overflow-x: hidden;
-    font-size: medium
-}
-
-
-.welcome-board{
-    width: 100vw;
-    background-color: #FFF1D6;   
-}
-
-.title{
-    height: 10vh;
-}
-
-.people-group{
-    height: 40vh;
-}
-
-.people-group img{
-    height: 30vh;
-    margin-top: auto;
-}
-
-
-
-.working-boy img{
-    height: 30vh;
-    margin-left: auto;
-}
-
-.working-team img{
-    height: 40vh;
-}
-
-.info-card{
-    height: 15vh;
-    width:12vw;
-    margin: 1vw;
-}
-
-.card{
-    margin: 1vw;
-}
-
-.member-card{
-    padding: 0 !important;
-    height: 11vh;
-    width: 10vw;
-    background-color: white;
-    margin: 1vw;
-}
-
-
-.member-card img{
-    height: 5vh !important;
-}
-
-
-.board-container{
-    padding-top: 10vw;
-}
-
-.board-card{
-    width: 50vw;
-    height: 10vh;
-    margin: 2vw;
-    padding-left: 2vw;
-    padding-right: 2vw;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); 
-}
-
-
-.greeting-people img{
-    height: 30vh;
-    align-items: flex-end !important;
-}
-
-.last-band-content{
-    width:30vw !important;
-    margin-top: 5vw;
-    margin-bottom: 5vw;
-}
-
-.band-button{
-    margin: 0.5vw;
-    width: 10vw;
-}
-
 
 .form-img-text{
     width: 40%;
-    height: 70vh;
+    height: 35vw;
     background-color: pink; 
 }
 
@@ -136,24 +25,16 @@
 }
 
 
-.close-button{
-    margin-left: auto !important;
-    margin-top: 0 !important;
-  
-}
-
-
-
-
-
 .form-field{
     width:60%;
 }
+
 
 .carousel{
     width: 100% !important;
     background-color: white !important;
 }
+
 .carousel-item.active{
     display: flex !important;
     flex-direction: column !important;
@@ -179,6 +60,17 @@
 }
 
 
+.wrap-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    margin: 1vw;
+}
+
+.wrap-container img{
+    height: 4vw !important;
+    margin: 0.5vw;}
+
 
 .wrap-container img{
     height:  3.5vw !important;
@@ -198,8 +90,6 @@
     background-color: #6C63FF !important ;
 }
 
-
-
 .form-field form{
     width: 70% !important;
 }
@@ -215,13 +105,99 @@ label.form-label{
     margin-top: 2vw;
 }
 
-.wrap-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
+
+
+.welcome-board{
+    width: 100vw;
+    background-color: #FFF1D6;   
+}
+
+.title{
+    height: 5vw;
+}
+
+.people-group{
+    height: 20vw;
+}
+
+.people-group img{
+    height: 15vw;
+    margin-top: auto;
+}
+
+
+.text-img-container{
+    width: 80vw !important;
+    margin: 10vw !important;
+}
+
+.working-boy img{
+    height: 15vw;
+    margin-left: auto;
+}
+
+
+.working-team img{
+    height: 20vw;
+}
+
+.info-card{
+    height: 7.5vw;
+    width:12vw;
     margin: 1vw;
 }
 
-.wrap-container img{
-    height: 4vw !important;
-    margin: 0.5vw;}
+.card{
+    margin: 1vw;
+}
+
+.member-card{
+    padding: 0 !important;
+    height: 5.5vw;
+    width: 10vw;
+    background-color: white;
+    margin: 1vw;
+}
+
+
+.member-card img{
+    height: 2.5vw !important;
+}
+
+
+
+
+.board-container{
+    padding-top: 10vw;
+}
+
+.board-card{
+    width: 50vw;
+    height: 5vw;
+    margin: 2vw;
+    padding-left: 2vw;
+    padding-right: 2vw;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); 
+}
+
+.greeting-people{
+    display: flex;
+    justify-content: flex-end;
+}
+
+
+.greeting-people img{
+    height: 15vw;
+    margin-left: auto !important;
+}
+
+.last-band-content{
+    width:30vw !important;
+    margin-top: 5vw;
+    margin-bottom: 5vw;
+}
+
+.band-button{
+    margin: 0.5vw;
+    width: 10vw;
+}
