Adding search functionality

--- a/frontend/src/allChannels.css
+++ b/frontend/src/allChannels.css
@@ -16,6 +16,14 @@
 }
 
 
+.search-bar2{
+    width: 25vw !important;
+    height: 4.5vh !important;
+    font-size: small !important;
+    border-radius: 3vw !important;
+}
+
+
 
 
 
