--- a/frontend/src/profile.css
+++ b/frontend/src/profile.css
@@ -1,71 +1,153 @@
-.heading{
-    position: absolute;
-    top: 11vw !important;
-    left: 20vw !important;
+.profile{
+    background-color: rgb(239, 245, 250) !important;
+    height: 94vh;
+    padding: 2vh;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    overflow: hidden;
 }
 
-.current-user-img{
-    height: 10vw !important;
-    margin-left:1vw; 
+.profile-left-block{
+    width: 20%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
-.user-details-col1{ 
-    width: 20% !important;
-    height: 89vh !important ;
+.profile-suggestions-list{
+    background-color: white;
+}
+
+.top-channels-block{
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    background-color: white;
+    width: 100%;
+    margin-top: 2vh;
+    padding: 1vh;
+    overflow: auto;
+}
+
+
+.top-channels-block::-webkit-scrollbar{
+    width: 0.5vh;
+    background-color:#eef0f7;
+}
+
+.top-channels-block::-webkit-scrollbar-thumb{
+    background-color:#d1d8fc;
+}
+
+
+.large-block{
+    height: 100%;
+    width: 78%;
+    display: flex;
+    flex-direction: row;
+}
+
+.own-profile-img-block{
+    width: 25%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1vw;
-}
-
-.user-details-col2{
-    width: 60% !important;
-    height: 89vh !important ;
-    display: flex;
-    flex-direction: column;
-    padding: 1vw;
-}
-
-.user-details-col1 .form-control{
-    width: 90% !important;
-    margin-bottom: 0.5vw;
-
-}
-
-.mini-info-bar{
-    width: 100%;
-
-}
-
-
-.basic-information, .activities{
-    width: 100%;
     background-color: white;
-    margin-bottom: 2vw;
-}
-
-.activities{
-    padding: 1vw;
-}
-
-.each-info{
-    display: flex;
-    flex-direction: column;
-    
    
 }
 
-.user-details-col2 .row{
-    margin: 1vw;
+.own-profile-img{
+    width: 50%;
+    margin-bottom: 2vh;
+    margin-top: 2vh;
+}
+
+.edit-profile-btn{
+    display: flex;
+    background-color: #2F3C7E;
+    border: #2F3C7E;
+}
+
+.edit-profile-btn:hover{
+    transform: scale(1.1);
+    background-color: #2F3C7E;
+    border: #2F3C7E;
+}
+
+.delete-profile-btn{
+    margin-top: 1vh;
+    display: flex;
+    background-color: #f02132;
+    border:  #f02132;
 }
 
 
-.edit-icon{
-    border-radius: 50%;
-    padding: 0.5vw;
-    background-color: aqua;
+.delete-profile-btn:hover, .delete-modal-btn:hover{
+    transform: scale(1.1);
+    background-color: #f02132;
+    border:  #f02132;
 }
 
-.edit-icon:hover{
-    cursor: pointer;
+.delete-modal-btn{
+    background-color: #f02132;
+    border:  #f02132;
+}
+
+.profile-details-block{
+    flex-grow: 1;
+    height: 100%;
+    padding: 2vh;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    margin-left: 2vh;
+}
+
+.recent-activities-block{
+    width: 100%;
+    flex-grow: 1;
+    overflow: auto;
+}
+
+.history-block{
+    width: 100%;
+    flex-grow: 1;
+    overflow-y: auto;
+}
+
+
+.recent-activities-block::-webkit-scrollbar{
+    width: 0.5vh;
+    background-color:#eef0f7;
+}
+
+.recent-activities-block::-webkit-scrollbar-thumb{
+    background-color:#d1d8fc;
+}
+
+.history-item{
+    border: none;
+    margin: 0.5vh;
+}
+
+.view-post-link{
+    text-decoration: none;
+     font-size: small;
+     font-weight: bold;
+}
+
+.social-media-details{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.actual-social-media-details{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 2vh;
+    padding: 1vh;
 }
