--- a/frontend/src/channels.css
+++ b/frontend/src/channels.css
@@ -23,6 +23,8 @@
 }
 
 .middle-block{
+    display: flex;
+    flex-direction: column;
     background-color: transparent;
     width: 58%;
     height: 100%;
@@ -240,4 +242,14 @@
 .offcanvas-block{
     padding-top: 6vh;
     background-color: white;
+} 
+
+.no_channel{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    flex-grow: 1;
+    opacity: 50%;
 }
