--- a/frontend/src/channels.css
+++ b/frontend/src/channels.css
@@ -107,9 +107,16 @@
 }
 
 .individual-post{
-    background-color: white;
     width: 100;
+    overflow-y: auto;
 }
+
+.post-list{
+    margin-bottom: 1vw ;
+    background-color: white;
+    overflow-y: auto !important;
+}
+
 
 .post-user-img{
     height: 2vw;
