--- a/frontend/src/messages.css
+++ b/frontend/src/messages.css
@@ -65,8 +65,15 @@
     display: flex;
     flex-direction: row;
     bottom: 0 !important;
-    align-items: center;
+    align-items:baseline !important;
+    justify-content: center !important;
     position:relative ;
+}
+
+
+.text-area-links{
+    padding-bottom: 0 !important;
+    margin-bottom: 0 !important;
 }
 
 .text-area-formcontrol{
