--- a/frontend/src/messages.css
+++ b/frontend/src/messages.css
@@ -28,7 +28,6 @@
 .direct-message-item:hover{
     background-color: #d1d8fc;
     cursor: pointer;
-    transform: scale(1.1);
 }
 
 .message-middle-block{
@@ -37,6 +36,33 @@
     display: flex;
     flex-direction: column;
 }
+
+
+.sent-message, .recieved-message{
+    display: flex;
+    flex-direction: column;
+    width: 55%;
+    margin-top: 1vw;
+    margin-bottom: 1vw;
+}
+
+.sent-message{
+    margin-left: auto !important;
+    align-items: flex-end !important;
+}
+
+.message{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: white;
+    border-radius: 1vw;
+    padding: 1vw;
+}
+
+
+
+
 
 .connected-user-logo-block{
     width: 100%;
