--- a/frontend/src/messages.css
+++ b/frontend/src/messages.css
@@ -25,8 +25,11 @@
     border-radius: 0;
 }
 
+
+
+
 .direct-message-item:hover{
-    background-color: #d1d8fc;
+    background-color: #f0f1f8;
     cursor: pointer;
 }
 
