--- a/frontend/src/messages.css
+++ b/frontend/src/messages.css
@@ -87,15 +87,24 @@
 
 .message-block{
     flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    overflow-y:auto
 }
+
+.message-block::-webkit-scrollbar {
+    width: 0px; 
+    height: 0px; 
+}
+
 
 .textarea-block{
     width: 100%;
     display: flex;
     flex-direction: row;
     bottom: 0 !important;
-    align-items:baseline !important;
-    justify-content: center !important;
+    align-items:end !important;
+    justify-content:start !important;
     position:relative ;
 }
 
