Added functionality to search people

--- a/frontend/src/channels.css
+++ b/frontend/src/channels.css
@@ -228,7 +228,7 @@
 .view-link{
     font-size: small;
     text-decoration: none;
-    color: #d84434;
+    color: #d84434 !important; 
     font-weight: bold;
 }
 
